# bmf-omegga-fork

./: .gitignore  Car.brz  README.md  brz.md  join-brickadia-local.ahk  join-brickadia-local.py  probe-brickadia-backtick-forms.ahk  probe-brickadia-console-keys.ahk  probe-brickadia-f1-only.ahk  probe-brickadia-join-menu.ahk  probe-brickadia-server-tab-wide.ahk  probe-brickadia-server-tab.ahk  run-join-brickadia-local-python.cmd  run-join-brickadia-local.cmd  run-omegga-sendinput.cmd  run-omegga.cmd  type-brickadia-open-command.ahk
brickadia-ue4ss-re/: README.md
brickadia-ue4ss-re/notes/: CL12960-baseline.md  cl12960-baseline-findfirstof-session-latest.json  cl12960-baseline-session-latest.json  cl12960-baseline-staticfindobject-session-latest.json  cl12960-baseline-tests-latest.json  cl12960-baseline-tests-latest.md  cl12960-baseline-unwrap-session-latest.json  cl12960-chat-canary-latest.json  cl12960-chat-canary-latest.md  cl12960-chat-evidence-latest.json  cl12960-chat-session-latest.json  cl12960-community-roadmap.md  cl12960-evidence-latest.json  cl12960-full-tests-latest.json  cl12960-full-tests-latest.md  cl12960-prefab-replay-snapshot-2026-03-24.md  cl12960-world-export-canary-latest.json  cl12960-world-export-canary-latest.md  cl13530-baseline-findfirstof-session-latest.json  cl13530-baseline-session-latest.json  cl13530-baseline-tests-latest.json  (+234 more)
docs/: supported-omegga-runtime.md
omegga-master/omegga-master/tools/windows-console-bridge/: Cargo.toml  windows-sendkeys.ps1
omegga-master/omegga-master/tools/windows-console-bridge/src/: main.rs
(+241 files in other folders)
