[package]
name = "omegga-console-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ctrlc = "3.5"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
